--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "time-grunt": "^1.2.1"
   },
   "engines": {
-    "node": "^4.2.3",
+    "node": "6.11.2",
     "npm": "^2.14.7"
   },
   "scripts": {
