--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "scripts": {
     "start": "node server",
     "test": "grunt test",
+    "postinstall": "/app/node_modules/.bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
