--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,7 @@
     "angular-nvd3": "^1.0.5",
     "angular-bootstrap-calendar": "^0.19.3",
     "api-check": "^7.5.5",
-    "angular-google-maps": "^2.3.2",
-    "cloudinary-jquery": "^2.3.0",
-    "cloudinary-jquery-file-upload": "^2.3.0"
+    "angular-google-maps": "^2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
