--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
+    "csv": "^2.0.0",
+    "csv-parser": "^1.12.0",
+    "download-file": "^0.1.5",
     "ejs": "^2.3.3",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
+    "express-fileupload": "^0.3.0",
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
+    "fast-csv": "^2.4.1",
     "generator-angular-fullstack": "^3.3.0",
+    "json2csv": "^3.11.5",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
