--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-runtime": "^5.8.20",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
+    "cloudinary-angular": "^1.0.1",
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
