--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "server/app.js",
   "dependencies": {
     "babel-runtime": "^5.8.20",
+    "babylonjs": "^3.1.0-beta6",
     "bluebird": "^2.9.34",
+    "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
     "cloudinary-angular": "^1.0.1",
+    "cloudinary-jquery-file-upload": "^2.3.0",
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
@@ -17,6 +20,7 @@
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
     "generator-angular-fullstack": "^3.3.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
@@ -68,6 +72,7 @@
     "grunt-protractor-runner": "^3.1.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "html-webpack-plugin": "^1.7.0",
     "istanbul": "~0.4.1",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "~2.1.0",
