--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "angular-google-maps": "^2.4.1",
     "babel-runtime": "^5.8.20",
     "babylonjs": "^3.1.0-beta6",
     "bluebird": "^2.9.34",
     "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
+    "cloudinary": "^1.9.1",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-jquery-file-upload": "^2.3.0",
     "composable-middleware": "^0.3.0",
