--- a/package.json
+++ b/package.json
@@ -21,6 +21,39 @@
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
     "generator-angular-fullstack": "^3.3.0",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "^0.5.4",
+    "grunt-babel": "~5.0.0",
+    "grunt-build-control": "^0.6.0",
+    "grunt-concurrent": "^2.0.1",
+    "grunt-contrib-clean": "~0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-dom-munger": "^3.4.0",
+    "grunt-env": "~0.4.1",
+    "grunt-express-server": "^0.5.1",
+    "grunt-filerev": "^2.3.1",
+    "grunt-google-cdn": "~0.4.0",
+    "grunt-injector": "^0.6.0",
+    "grunt-jscs": "^2.1.0",
+    "grunt-karma": "~0.12.0",
+    "grunt-mocha-istanbul": "^3.0.1",
+    "grunt-mocha-test": "~0.12.7",
+    "grunt-newer": "^1.1.1",
+    "grunt-ng-annotate": "^1.0.1",
+    "grunt-ng-constant": "^1.1.0",
+    "grunt-node-inspector": "^0.4.1",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-open": "~0.2.3",
+    "grunt-postcss": "~0.7.1",
+    "grunt-protractor-runner": "^3.1.0",
+    "grunt-usemin": "^3.0.0",
+    "grunt-wiredep": "^2.0.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^3.10.1",
