--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^5.6.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^5.8.20",
     "babylonjs": "^3.1.0-beta6",
     "bluebird": "^2.9.34",
     "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
+    "cloudinary": "^1.9.1",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-jquery-file-upload": "^2.3.0",
     "composable-middleware": "^0.3.0",
@@ -69,7 +74,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^5.6.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "chai-things": "^0.2.0",
