--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "autoprefixer": "^6.0.0",
+    "babel-core": "^5.6.4",
     "babel-runtime": "^5.8.20",
     "babylonjs": "^3.1.0-beta6",
     "bluebird": "^2.9.34",
