--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
     "nodemailer": "^2.3.1",
