--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary-jquery-file-upload": "^2.3.0",
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
+    "connect-livereload": "^0.5.3",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "cron": "^1.3.0",
