--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-mocks": "~1.4.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "bootstrap": "~3.1.1",
