--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
   "scripts": {
     "start": "node server",
     "test": "grunt test",
+    "post-install": "./node_modules/bower/bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
