--- a/package.json
+++ b/package.json
@@ -147,8 +147,8 @@
     "time-grunt": "^1.2.1"
   },
   "engines": {
-    "node": ">=6.11.2",
-    "npm": ">=3.10.10"
+    "node": "~6.11.2",
+    "npm": "~3.10.10"
   },
   "scripts": {
     "start": "node server",
