--- a/package.json
+++ b/package.json
@@ -151,9 +151,9 @@
     "npm": "~3.10.10"
   },
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "test": "grunt test",
-    "post-install": "./node_modules/bower/bin/bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
