--- a/package.json
+++ b/package.json
@@ -153,8 +153,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
+    "postinstall": "bower install"
   },
   "private": true
 }
