--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "supertest": "^1.1.0",
     "time-grunt": "^1.2.1"
   },
+  "cacheDirectories": ["client/node_modules", "server/node_modules", "client/bower_components", "server/bower_components"],
   "engines": {
     "node": "~6.11.2",
     "npm": "~3.10.10"
@@ -153,8 +154,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "grunt test",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
-    "postinstall": "bower install"
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
 }
