--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bluebird": "^2.9.34",
     "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
-    "bower": "^1.8.2",
+    "bower": ">=1.8.0",
     "cloudinary": "^1.9.1",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-jquery-file-upload": "^2.3.0",
@@ -148,12 +148,12 @@
   },
   "engines": {
     "node": "~6.11.2",
-    "bower":"~1.8.0",
     "npm": "~3.10.10"
   },
   "scripts": {
     "start": "node server.js",
     "test": "grunt test",
+    "postinstall":"bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
