--- a/bower.json
+++ b/bower.json
@@ -4,21 +4,21 @@
   "dependencies": {
     "angular": ">=1.5.0",
     "angular-mocks": ">=1.4.0",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.0.1",
-    "bootstrap": "~3.1.1",
-    "angular-resource": "~1.4.0",
-    "angular-cookies": "~1.4.0",
-    "angular-sanitize": "~1.4.0",
-    "angular-bootstrap": "~0.13.0",
+    "json3": ">=3.3.1",
+    "es5-shim": ">=3.0.1",
+    "bootstrap": ">=3.1.1",
+    "angular-resource": ">=1.4.0",
+    "angular-cookies": ">=1.4.0",
+    "angular-sanitize": ">=1.4.0",
+    "angular-bootstrap": ">=0.13.0",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.15",
-    "angular-validation-match": "~1.5.2",
-    "angular-nvd3": "^1.0.5",
-    "angular-bootstrap-calendar": "^0.19.3",
-    "api-check": "^7.5.5",
-    "angular-google-maps": "^2.3.2"
+    "lodash": ">=2.4.1",
+    "angular-ui-router": ">=0.2.15",
+    "angular-validation-match": ">=1.5.2",
+    "angular-nvd3": ">=1.0.5",
+    "angular-bootstrap-calendar": ">=0.19.3",
+    "api-check": ">=7.5.5",
+    "angular-google-maps": ">=2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
