--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bluebird": "^2.9.34",
     "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
-    "bower": ">=1.8.0",
+    "bower": "^1.8.2",
     "cloudinary": "^1.9.1",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-jquery-file-upload": "^2.3.0",
@@ -153,7 +153,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "grunt test",
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
