--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "npm": "~3.10.10"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node server",
     "test": "grunt test",
     "postinstall": "./node_modules/bower/bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
