--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
   "scripts": {
     "start": "grunt serve",
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "./node_modules/bower/bin/bower install && grunt install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
