--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "grunt-wiredep": "^2.0.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^5.0.0",
+    "livereload-js": "^2.2.2",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
@@ -151,9 +152,9 @@
     "npm": "~3.10.10"
   },
   "scripts": {
-    "start": "grunt serve",
+    "start": "node server",
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install && grunt install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
