--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-nvd3": ">=1.0.5",
     "angular-bootstrap-calendar": "~0.19.3",
     "api-check": ">=7.5.5",
-    "angular-google-maps": ">=2.3.2",
+    "angular-google-maps": "~2.3.2",
     "angularjs-datepicker": "^2.1.23"
   },
   "devDependencies": {
