--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-bootstrap-calendar": "~0.19.3",
     "api-check": ">=7.5.5",
     "angular-google-maps": "~2.3.2",
-    "angularjs-datepicker": "^2.1.23"
+    "angularjs-datepicker": "^2.1.23",
+    "angular-simple-logger": "~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0",
