--- a/bower.json
+++ b/bower.json
@@ -2,47 +2,32 @@
   "name": "essence-events-repo",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.6.7",
-    "angular-mocks": "^1.6.7",
-    "json3": "^3.3.2",
-    "es5-shim": "^4.5.9",
-    "bootstrap": "^3.3.7",
-    "angular-resource": "^1.6.7",
-    "angular-cookies": "^1.6.7",
-    "angular-sanitize": "^1.6.7",
-    "angular-bootstrap": "^2.5.0",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
-    "livereload-js": "^2.2.1",
-    "angular-ui-router": "^1.0.11",
-    "angular-validation-match": "^1.9.0",
-    "angular-nvd3": "^1.0.9",
-    "angular-bootstrap-calendar": "^0.30.0",
-    "api-check": "^7.5.5",
-    "angular-google-maps": "^2.4.1",
-    "angularjs-datepicker": "^2.1.23",
-    "angular-simple-logger": "^0.1.7"
+    "angular": "1.6.7",
+    "angular-mocks": "1.4.0",
+    "json3": "3.3.1",
+    "es5-shim": "3.0.1",
+    "bootstrap": "3.1.1",
+    "angular-resource": "1.4.0",
+    "angular-cookies": "1.4.0",
+    "angular-sanitize": "1.4.0",
+    "angular-bootstrap": "0.13.0",
+    "font-awesome": "4.1.0",
+    "lodash": "4.13.1",
+    "livereload-js": "2.2.1",
+    "angular-ui-router": "0.2.15",
+    "angular-validation-match": "1.5.2",
+    "angular-nvd3": "1.0.5",
+    "angular-bootstrap-calendar": "0.19.3",
+    "api-check": "7.5.5",
+    "angular-google-maps": "2.3.3",
+    "angularjs-datepicker": "2.1.23",
+    "angular-simple-logger": "0.1.7"
   },
   "devDependencies": {
-    "angular-mocks": "^1.6.7",
+    "angular-mocks": "~1.4.0",
     "livereload-js": "^2.2.1"
   },
   "resolutions": {
-    "angular": "^1.6.7",
-    "angular-mocks": "^1.6.7",
-    "json3": "^3.3.2",
-    "es5-shim": "^4.5.9",
-    "bootstrap": "^3.3.7",
-    "angular-resource": "^1.6.7",
-    "angular-cookies": "^1.6.7",
-    "angular-sanitize": "^1.6.7",
-    "angular-bootstrap": "^2.5.0",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
-    "angular-ui-router": "^1.0.11",
-    "angular-validation-match": "^1.9.0",
-    "angular-nvd3": "^1.0.9",
-    "angular-bootstrap-calendar": "^0.30.0",
-    "angular-google-maps": "^2.4.1"
+    "angular": "1.6.7"
   }
 }
