--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "angular-resource": "1.4.0",
     "angular-cookies": "1.4.0",
     "angular-sanitize": "1.4.0",
-    "angular-bootstrap": "2.3.1",
+    "angular-bootstrap": "~0.13.0",
     "font-awesome": "4.1.0",
     "lodash": "4.13.1",
     "livereload-js": "2.2.1",
