--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bluebird": "^2.9.34",
     "blueimp-file-upload": "^9.19.2",
     "body-parser": "^1.13.3",
-    "bower": "^1.8.2",
+    "bower": "1.8.2",
     "cloudinary": "^1.9.1",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-jquery-file-upload": "^2.3.0",
