--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
     "generator-angular-fullstack": "^3.3.0",
-    "grunt": "^0.4.5",
+    "grunt": "0.4.5",
     "grunt-angular-templates": "^0.5.4",
     "grunt-babel": "~5.0.0",
     "grunt-build-control": "^0.6.0",
+    "grunt-cli": "1.2.0",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-clean": "~0.7.0",
     "grunt-contrib-concat": "^0.5.1",
