--- a/package.json
+++ b/package.json
@@ -153,9 +153,9 @@
     "npm": "~3.10.10"
   },
   "scripts": {
-    "start": "node server",
+    "start": "grunt --force",
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install --config.interactive=false",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
