--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
   "scripts": {
     "start": "grunt --force",
     "test": "grunt test",
-    "postinstall": "bower install --config.interactive=false",
+    "postinstall": "bower install --config.interactive=true",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
   "private": true
