--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,6 @@
     "livereload-js": "^2.2.1"
   },
   "resolutions": {
-    "angular": "1.6.7",
-    "bootstrap": "3.1.1"
+    "angular": "1.6.7"
   }
 }
