--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "essence-events-repo",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.5.0",
+    "angular": "~1.5.x",
     "angular-mocks": "1.4.0",
     "json3": "3.3.1",
     "es5-shim": "3.0.1",
@@ -28,7 +28,7 @@
     "livereload-js": "^2.2.1"
   },
   "resolutions": {
-    "angular": "1.5.0",
+    "angular": "~1.5.x",
     "bootstrap" : "3.1.1"
   }
 }
